@@ -1,49 +1,2 @@
-usr/share/carddecks/svg-ancient-egyptians/11.png
-usr/share/carddecks/svg-ancient-egyptians/Ancient_Egyptians.svgz
-usr/share/carddecks/svg-ancient-egyptians/index.desktop
-usr/share/carddecks/svg-dondorf/11.png
-usr/share/carddecks/svg-dondorf/dondorf.svgz
-usr/share/carddecks/svg-dondorf/index.desktop
-usr/share/carddecks/svg-future/11.png
-usr/share/carddecks/svg-future/future.svgz
-usr/share/carddecks/svg-future/index.desktop
-usr/share/carddecks/svg-gm-paris/11.png
-usr/share/carddecks/svg-gm-paris/index.desktop
-usr/share/carddecks/svg-gm-paris/paris.svgz
-usr/share/carddecks/svg-jolly-royal/11.png
-usr/share/carddecks/svg-jolly-royal/index.desktop
-usr/share/carddecks/svg-jolly-royal/jolly-royal.svgz
-usr/share/carddecks/svg-konqi-modern/11.png
-usr/share/carddecks/svg-konqi-modern/index.desktop
-usr/share/carddecks/svg-konqi-modern/konqi.svgz
-usr/share/carddecks/svg-nicu-ornamental/11.png
-usr/share/carddecks/svg-nicu-ornamental/index.desktop
-usr/share/carddecks/svg-nicu-ornamental/ornamental.svgz
-usr/share/carddecks/svg-nicu-white/11.png
-usr/share/carddecks/svg-nicu-white/index.desktop
-usr/share/carddecks/svg-nicu-white/white.svgz
-usr/share/carddecks/svg-oxygen-air/11.png
-usr/share/carddecks/svg-oxygen-air/index.desktop
-usr/share/carddecks/svg-oxygen-air/oxygen-air.svgz
-usr/share/carddecks/svg-oxygen-white/11.png
-usr/share/carddecks/svg-oxygen-white/index.desktop
-usr/share/carddecks/svg-oxygen-white/oxygen-white.svgz
-usr/share/carddecks/svg-oxygen/11.png
-usr/share/carddecks/svg-oxygen/index.desktop
-usr/share/carddecks/svg-oxygen/oxygen.svgz
-usr/share/carddecks/svg-penguins/11.png
-usr/share/carddecks/svg-penguins/index.desktop
-usr/share/carddecks/svg-penguins/penguins.svgz
-usr/share/carddecks/svg-standard/11.png
-usr/share/carddecks/svg-standard/index.desktop
-usr/share/carddecks/svg-standard/standard.svgz
-usr/share/carddecks/svg-tigullio-international/index.desktop
-usr/share/carddecks/svg-tigullio-international/queen-of-hearts.png
-usr/share/carddecks/svg-tigullio-international/tigullio-international.svgz
-usr/share/carddecks/svg-xskat-french/11.png
-usr/share/carddecks/svg-xskat-french/french.svgz
-usr/share/carddecks/svg-xskat-french/index.desktop
-usr/share/carddecks/svg-xskat-german/11.png
-usr/share/carddecks/svg-xskat-german/german.svgz
-usr/share/carddecks/svg-xskat-german/index.desktop
+usr/share/carddecks/
 usr/share/kconf_update/kgthemeprovider-migration.upd
