@@ -1,8 +1,0 @@
-# Don't install extra license files.
-./usr/share/carddecks/svg-nicu-ornamental/AUTHORS
-./usr/share/carddecks/svg-nicu-ornamental/COPYING
-./usr/share/carddecks/svg-nicu-white/AUTHORS
-./usr/share/carddecks/svg-nicu-white/COPYING
-./usr/share/carddecks/svg-penguins/COPYRIGHT
-./usr/share/carddecks/svg-xskat-french/COPYRIGHT
-./usr/share/carddecks/svg-xskat-german/COPYRIGHT
